--- a/css/galeria.css
+++ b/css/galeria.css
@@ -15,6 +15,9 @@
     box-sizing: border-box;
     transition: transform 0.3s ease;
     user-select: none;
+
+    --aspect-ratio: calc(100% * 0.66); /* 3:2 */
+    height: var(--aspect-ratio);
 }
 
 .gallery-wrap-photo:hover {
