Updated galleries navigation

--- a/css/galeria.css
+++ b/css/galeria.css
@@ -31,26 +31,26 @@
     align-items: center;
     padding: 17px 0 17px 0;
     margin: 0 10px 0 10px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .title-navigation-current{
     margin-top: 0;
     margin-bottom: 0;
     color: white;
-    font-size: 3rem;
+    font-size: 1.5rem;
     cursor: pointer;
     font-weight: bold;
-    padding: 0 5px 0 5px;
+    padding: 0 10px 0 10px;
 }
 
 .title-navigation-link{
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: white;
     font-weight: lighter;
-    padding: 0 5px 0 5px;
+    padding: 0 10px 0 10px;
     transition: transform 0.3s ease;
 }
 
@@ -85,7 +85,7 @@
 }
 
 /* NAVIGATION MANAGEMENT */
-@media screen and (max-width: 1475px){
+@media screen and (max-width: 1000px){
 
     .title-navigation-container{
         text-align: center;
