--- a/css/galeria.css
+++ b/css/galeria.css
@@ -38,7 +38,7 @@
     margin-top: 0;
     margin-bottom: 0;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.2em;
     cursor: pointer;
     font-weight: bold;
     padding: 0 10px 0 10px;
