--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,16 @@
     overflow: hidden;
 }
 
-.index-home video {
+#bg-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100vw;
+    min-height: 100%;
+}
+
+#bg-img {
     position: absolute;
     top: 50%;
     left: 50%;
