--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,13 @@ button:hover{
     display: none;
 }
 
+.sides-padding-on-big{
+    box-sizing: border-box;
+
+    padding-left: 6.25%;
+    padding-right: 6.25%;
+}
+
 /* TABLETS */
 @media screen and (max-width: 1100px) and (min-width: 851px){
 
@@ -169,6 +176,11 @@ button:hover{
 
     .display-on-small{
         display: block;
+    }
+
+    .sides-padding-on-big{
+        padding-left: 0;
+        padding-right: 0;
     }
 
 }
@@ -200,6 +212,11 @@ button:hover{
 
     .display-on-small{
         display: block;
+    }
+
+    .sides-padding-on-big{
+        padding-left: 0;
+        padding-right: 0;
     }
 
 }
