--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,12 @@ button:hover{
     padding-right: 6.25%;
 }
 
+.show-on-big{}
+
+.show-on-small{
+    display: none;
+}
+
 /* TABLETS */
 @media screen and (max-width: 1100px) and (min-width: 851px){
 
@@ -181,6 +187,14 @@ button:hover{
     .sides-padding-on-big{
         padding-left: 0;
         padding-right: 0;
+    }
+
+    .show-on-big{
+        display: none;
+    }
+
+    .show-on-small{
+        display: block;
     }
 
 }
@@ -217,6 +231,14 @@ button:hover{
     .sides-padding-on-big{
         padding-left: 0;
         padding-right: 0;
+    }
+
+    .show-on-big{
+        display: none;
+    }
+
+    .show-on-small{
+        display: block;
     }
 
 }
