--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,18 @@
 @import "header.css";
 @import "footer.css";
 
+@font-face {
+    font-family: 'BerlingskeSans';
+    src: url('../fonts/Berlingske_Sans_Regular.ttf') format('truetype');
+}
+
 html {
     scroll-behavior: smooth;
     user-select: none;
 }
 
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: 'BerlingskeSans', Helvetica, sans-serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
