--- a/css/index.css
+++ b/css/index.css
@@ -81,8 +81,8 @@
 }
 
 .index-galleries-section{
-    min-width: 40vh;
-    height: 40vh;
+    width: 20vw;
+    height: 20vw;
     margin-bottom: 50px;
     flex: 0 0 22.5%;
     box-sizing: border-box;
@@ -120,20 +120,6 @@
     letter-spacing: 3px;
 }
 
-/* WRAP */
-@media screen and (max-width: 1600px) and (min-width: 851px){
-
-    .index-galleries-section {
-        flex-basis: 47.5%;
-        height: 32.5vh;
-    }
-
-    .index-galleries-section-text{
-        text-align: center;
-        letter-spacing: 5px;
-    }
-
-}
 
 /* TABLETS */
 @media screen and (max-width: 1100px) and (min-width: 851px){
@@ -147,7 +133,13 @@
 
     .index-galleries-section {
         flex-basis: 100%;
-        height: 25vh;
+        width: 90vw;
+        height: 60vw;
+/*
+        flex-basis: 47.5%;
+        width: 45vw;
+        height: 45vw;
+*/
     }
 
     .index-galleries-section-text{
