--- a/css/modal.css
+++ b/css/modal.css
@@ -16,6 +16,10 @@
 /* Modal Content (image) */
 .modal-content {
     margin: auto;
+    padding-left: calc(5vw + 10px);
+    padding-right: calc(5vw + 10px);
+    box-sizing: border-box;
+
     display: block;
     max-height: 80vh;
     max-width: 90vw;
@@ -69,3 +73,64 @@
     cursor: pointer;
 }
 
+/* ARROWS */
+
+.modal-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3rem;
+    color: white;
+    cursor: pointer;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+    z-index: 2;
+}
+
+.modal-arrow:hover {
+    opacity: 1;
+}
+
+.modal-arrow-left {
+    left: 5vw;
+}
+
+.modal-arrow-right {
+    right: 5vw;
+}
+
+/* TABLETS */
+@media screen and (max-width: 1100px) and (min-width: 851px){
+
+    .modal-content {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .modal-arrow-left {
+        left: 10px;
+    }
+
+    .modal-arrow-right {
+        right: 10px;
+    }
+
+}
+
+/* SMARTPHONES */
+@media screen and (max-width: 850px) {
+
+    .modal-content {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .modal-arrow-left {
+        left: 10px;
+    }
+
+    .modal-arrow-right {
+        right: 10px;
+    }
+
+}
