--- a/css/header.css
+++ b/css/header.css
@@ -103,7 +103,7 @@
     width: 100%;
     padding: 0 50px;
     box-sizing: border-box;
-    color: white;                 /* TODO: EDITAR */
+    color: white;
 }
 
 /* TABLETS */
