--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,8 @@
 
 .index-home {
     height: 90vh;
-    color: white;                                               /* TODO: EDITAR */
-    background-color: #14110f;                                  /* TODO: EDITAR */
+    color: white;
+    background-color: #14110f;
     /*background-image: url("../assets/drone_view_frame_0.webp");*/
     background-repeat: no-repeat;
     background-size: cover;
@@ -65,8 +65,8 @@
 }
 
 .index-galleries {
-    background: #14110f;                                    /* TODO: EDITAR */
-    color: white;                                           /* TODO: EDITAR */
+    background: #14110f;
+    color: white;
     padding: 50px 50px 0 50px;
     box-sizing: border-box;
     height: min-content;
