--- a/css/index.css
+++ b/css/index.css
@@ -138,13 +138,14 @@
         height: 60vw;
         */
         flex-basis: 47.5%;
-        width: 40vw;
-        height: 40vw;
+        width: 42.5vw;
+        height: 42.5vw;
 
     }
 
     .index-galleries-section-text{
         text-align: center;
+        font-size: 0.85rem;
     }
 
 }
